# mrobosub

./: .bash_aliases  .gitignore  .gitmodules  .screenrc  .tmux.conf  .vimrc  Dockerfile  README.md  docker-compose.yml  mypy.ini  package.xml
.devcontainer/: devcontainer.json
.github/workflows/: mypy.yaml
mrobosub/: CMakeLists.txt  package.xml
mrobosub_bringup/: CMakeLists.txt  package.xml
mrobosub_bringup/launch/: bringup.launch  bringup_sim.launch  quartermaster.launch
mrobosub_bringup/src/: mavros  quartermaster  wait_for_startup
mrobosub_fcu/: CMakeLists.txt  package.xml
mrobosub_fcu/include/: Screw.hpp  Thruster.hpp  ThrusterManager.hpp
mrobosub_fcu/launch/: thruster.launch
mrobosub_fcu/params/: fits.yaml  thrusters.yaml
mrobosub_fcu/src/: Thruster.cpp  ThrusterManager.cpp  profile.py  thruster_node.cpp
mrobosub_gnc/: CMakeLists.txt  heave_control.py  node.py  package.xml  pid.py  pid_interface.py  roll_control.py  yaw_control.py
mrobosub_gnc/launch/: gnc.launch  (+7 more)
mrobosub_hal/: CMakeLists.txt  depth_processor.cpp  package.xml
mrobosub_lib/: CMakeLists.txt  forward_test.py  lib.py  package.xml  setup.py
mrobosub_localization/: CMakeLists.txt  package.xml
mrobosub_msgs/: CMakeLists.txt  package.xml
mrobosub_msgs/msg/: HeadingRequest.msg  HydrophoneAngle.msg  ObjectPosition.msg
mrobosub_msgs/srv/: BinCamPos.srv  GlyphPosition.srv  ObjectPosition.srv  PathmarkerAngle.srv  RequestPosition.srv
mrobosub_perception/: CMakeLists.txt  draw_bb_boxes.py  ml_service.py  package.xml  pathmarker_pipeline.grip
mrobosub_planning/: CMakeLists.txt  package.xml
mrobosub_planning/doc/: example.launch  example.py  globals.yaml  periodic_io.py  sim.py  state_machine.md  state_machine.py  tasks.py  tasks.yaml
mrobosub_planning/launch/: captain.launch  depth_test.launch  movementTest1_node.launch  sanity_planner.launch  task_planner.launch  test_node.launch
mrobosub_planning/param/: buoy_task.yaml  common.yaml  competition_states.yaml  gate_task.yaml  globals.yaml  idealistic_states.yaml  prequal_front.yaml  prequal_states.yaml  prequal_turn.yaml  sanity_states.yaml  states.yaml  test_node.yaml
mrobosub_planning/src/: abstract_states.py  alignment_test.py  bin_states.py  bin_transitions.py  buoy_old.py  buoy_run.py  buoy_states.py  buoy_task.py  buoy_transitions.py  captain.py  circumnavigate_states.py  common.py  common_states.py  competition_states.py  competition_states_old.py  deprecated_states.py.unused  example.py  forward_test.py  gate.py  gate_old.py  gate_states.py  gate_task.py  gate_transitions.py  idealistic_states.py  lib.py  movementTest1_node.py  mypy.ini  new_buoy_task.py  non_idealistic_task_planner.py  octagon_states.py  path_to_bin_transitions.py  pathmarker_test.py  periodic_io.py  prequal_front.py  prequal_states.py  prequal_strafe.py  prequal_strafe.py.unused  prequal_task_planner.py  prequal_turn.py  qual_transitions.py  (+16 more)
mrobosub_planning/src/non_idealistic_states/: __init__.py  align_gate.py  align_path_marker.py  buoy_task.py  gate_task.py  scan.py  submerge.py
mrobosub_planning/src/prequal_states/: gate_task.py
mrobosub_planning/src/test/: bin_states_test.py  buoy_states_test.py  utils.py
mrobosub_planning/src/tests/: test_start.py
mrobosub_teleop/: CMakeLists.txt  package.xml
mrobosub_tests/: CMakeLists.txt  package.xml
src/: controller.py
(+113 files in other folders)
