<package format="2">
    <name>mrobosub</name>
    <version>0.0.2</version>
    <description>
        metapackage for the mrobosub ros network
    </description>
    <maintainer email="michiganroboticsubmarine@gmail.com">Michigan Robotic Submarine</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <export>
        <metapackage />
    </export>
</package>
