<package format="2">
    <name>mrobosub_planning</name>
    <version>1.0.0</version>
    <description>
        high level task planning and algorithms
    </description>
    <maintainer email="michiganroboticsubmarine@gmail.com">Michigan Robotic Submarine</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>rospy</exec_depend>
    <depend>mrobosub_msgs</depend>
</package>
